# neural-dnf

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python_unit_testing.yaml
neural_dnf/: __init__.py  common.py  neural_dnf.py  post_training.py  semi_symbolic.py  utils.py
unit_test/: disentanglement_test.py  neural_dnf_test.py  post_training_test.py  semi_symbolic_test.py  utils_test.py
