[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "neural_dnf"
description = "Neural DNF-based models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
]
dynamic = ["version"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["neural_dnf*"]
